codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  这 次 体 验 如 何 ？

› 1. 程 序 错 误   崩 溃 、 报 错 、 卡 住 ， 或 界 面 /行 为 异 常 。
  2. 结 果 不 佳   输 出 偏 题 、 错 误 、 不 完 整 或 帮 助 不 大 。
  3. 结 果 很 好   结 果 有 帮 助 、 正 确 、 质 量 高 ， 或 体 验 很 好 。
  4. 安 全 拦 截   正 常 使 用 场 景 被 安 全 策 略 或 拒 绝 机 制 拦 截 。
  5. 其 他       性 能 慢 、 功 能 建 议 、 交 互 体 验 反 馈 或 其 他 问 题 。
