codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  上 传 日 志 ？

  将 发 送 以 下 文 件 ：
    • codex-logs.log
    • codex-connectivity-diagnostics.txt

  连 接 诊 断
    - OPENAI_BASE_URL is set and may affect connectivity.
      - OPENAI_BASE_URL = hello

› 1. 是   将 当 前  Codex 会 话 日 志 分 享 给 团 队 以 协 助 排 查 。
  2. 否

  按  enter 确 认 ， 或 按  esc 返 回
