codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  启 用 完 全 访 问 权 限 ？
  当  Codex
  以 完 全 访 问 权 限 运 行 时 ， 它 可 以 在 未 经 你 确 认 的 情 况 下 编 辑 你 电 脑 上 的 任 意 文 件 ， 并 执
  行 可 联 网 命 令 。
  启 用 完 全 访 问 权 限 请 务 必 谨 慎 ， 这 会 显 著 增 加 数 据 丢 失 、 泄 露 或 异 常 行 为 的 风 险 。

› 1. 是 ， 继 续         为 本 会 话 启 用 完 全 访 问 权 限
  2. 是 ， 且 不 再 询 问   启 用 完 全 访 问 权 限 并 记 住 此 选 择
  3. 取 消             返 回 ， 不 启 用 完 全 访 问 权 限

  按  enter 确 认 ， 或 按  esc 返 回
