codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• 正在启动 MCP 服务：alpha (0s • esc 中断)                                      " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (16, " "), (18, " "), (20, " "), (38, " "), (40, " ")]
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? 快捷键                                                     剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " ")]
