codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 模 型 与 推 理 级 别
  可 通 过  codex -m <model_name> 或  config.toml 使 用 旧 版 模 型

› 1. test-visible-model（ 当 前 ）   支 持 推 理 级 别 ： 中 ； 默 认 ： 中

  按  Enter 选 择 推 理 级 别 ， 按  Esc 关 闭 。
