codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  为  gpt-5.1-codex-max 选 择 推 理 级 别

  1. 低           使 用 低 推 理 强 度 ， 适 合 常 规 简 单 任 务 。
  2. 中 （ 默 认 ）   使 用 中 等 推 理 强 度 ， 兼 顾 质 量 与 速 度 。
› 3. 高 （ 当 前 ）   使 用 高 推 理 强 度 ， 适 合 复 杂 分 析 与 规 划 。
  4. 超 高         使 用 超 高 推 理 强 度 ， 适 合 高 复 杂 度 问 题 。

  按  enter 确 认 ， 或 按  esc 返 回
